--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio Page</title>
+  <title>Portfolio Page FOR FCC</title>
   
   
   
@@ -16,16 +16,14 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
-
+ <div class="pic1" id ="welcome-section"> 
 <div class="header">
   <div class="title-box">
     <h1>Paul Martin</h1>
     <h2> WEB DESIGN &nbsp &nbsp ■ &nbsp &nbsp FRONT-END DEVELOPMENT &nbsp &nbsp ■ &nbsp &nbsp PHOTOGRAPHY</h2> 
   </div>  
-</div>
   
-<div id="topnav">
+  <div id="navbar">
   
   <a href="#top"> <div 
 class="navtabs">Home</div></a>
@@ -36,14 +34,17 @@ class="navtabs">Home</div></a>
   
  <a href ="#contact"> <div class="navtabs">Contact</div></a>
 </div> 
+  
+</div>
+  </div>
+
 <div class ="main" id="top">
- 
-  <div class="pic1"> </div>
 
 <div class="text1"> 
   <div class="about" id = "about">
   <h1> About me... </h1>
   <p>A creative, driven, self-taught front end developer who specialises in writing clean, efficiant HTML, CSS and JavaScript code. I have a great track record of working both in a team and individually to tight deadlines in high-pressure work environments.
+ </a>
   </div>  
   </div>
 
@@ -53,11 +54,11 @@ class="navtabs">Home</div></a>
   <!-- Individual Project Container -->
   <div class="projects-main">
       <!-- Projects Picture -->
-    <div class="projects-pic"><img src="https://i.imgur.com/e9gVcpm.png" width="100%"></div>
+    <a href = "https://codepen.io/paulmartin91/pen/BVmRJM"><div class="projects-pic"><img src="https://i.imgur.com/e9gVcpm.png" width="100%"></div></a>
       <!-- Projects Buffer -->
     <div class="projects-buffer"></div>
       <!-- Projects Description -->
-   <div class="projects-desc">
+   <div class="project-tile">
      <p> <b>Apple Airpods Landing Page</b><br><br>My take on a product landing page for Apple Airpods. This fully-responsive page uses grid layout functionality to scale and media queries to respond to varying display types.</p>
     </div>
   </div>
@@ -66,11 +67,11 @@ class="navtabs">Home</div></a>
     <!-- Individual Project Container -->
   <div class="projects-main">
       <!-- Projects Picture -->
-    <div class="projects-pic"><img src="https://i.imgur.com/oT6QGPe.png" width="100%"></div>
+    <div class="projects-pic"><a href ="https://codepen.io/paulmartin91/pen/QxZzjm"><img src="https://i.imgur.com/oT6QGPe.png" width="100%"></a></div>
       <!-- Projects Buffer -->
     <div class="projects-buffer"></div>
       <!-- Projects Description -->
-   <div class="projects-desc">
+   <div class="project-tile">
      <p><b>Flex-box Guide</b><br><br>A fully-responsive technical documenent, outlining the propper uses and functionality of flex-boxes. This page features a fully functional, animated, scrolling side-bar and a scaling flex-box orientated layout.</p>
     </div>
   </div>
@@ -78,11 +79,11 @@ class="navtabs">Home</div></a>
     <!-- Individual Project Container -->
   <div class="projects-main">
       <!-- Projects Picture -->
-    <div class="projects-pic"><img src="https://i.imgur.com/JguKkG7.png" width="100%"></div>
+    <div class="projects-pic"><a href ="https://codepen.io/paulmartin91/pen/BYYNMV"><img src="https://i.imgur.com/JguKkG7.png" width="100%"></a></div>
       <!-- Projects Buffer -->
     <div class="projects-buffer"></div>
       <!-- Projects Description -->
-   <div class="projects-desc">
+   <div class="project-tile">
      <p><b>API Twitch Dashboard</b><br><br>My JavaScript program uses a getJSON request to contact the Twitch Streaming API  and generate tabs onto a dashboard, displaying the status and activity of the requested streamers.</p>
     </div>
   </div>
@@ -90,11 +91,11 @@ class="navtabs">Home</div></a>
     <!-- Individual Project Container -->
   <div class="projects-main">
       <!-- Projects Picture -->
-    <div class="projects-pic"><img src="https://i.imgur.com/aY9dYbg.png" width="100%"></div>
+    <div class="projects-pic"><a href="https://codepen.io/paulmartin91/pen/jKVPOK"><img src="https://i.imgur.com/aY9dYbg.png" width="100%"></a></div>
       <!-- Projects Buffer -->
     <div class="projects-buffer"></div>
       <!-- Projects Description -->
-   <div class="projects-desc">
+   <div class="project-tile">
      <p><b>Star Wars Survey Form</b><br><br>This fully functioning survey form collects the users inputed data from the form elements. </p>
     </div>
   </div>
@@ -102,23 +103,40 @@ class="navtabs">Home</div></a>
     <!-- Individual Project Container -->
   <div class="projects-main">
       <!-- Projects Picture -->
-    <div class="projects-pic"><img src="https://i.imgur.com/Q9antPJ.png" width="100%"></div>
+    <div class="projects-pic"><a href ="https://codepen.io/paulmartin91/pen/PQGeJZ"><img src="https://i.imgur.com/Q9antPJ.png" width="100%"></a></div>
       <!-- Projects Buffer -->
     <div class="projects-buffer"></div>
       <!-- Projects Description -->
-   <div class="projects-desc">
+   <div class="project-tile">
      <p><b>Wikipedia Search API</b><br><br>This page takes the phrase from the searchbox and passes thr information through Wikipedia's API to generate a seach list of search results for the user.</p>
     </div>
   </div>
       <!-- Projects End -->
 </div>
   </div>
+  
+  <div class="text3" id ="contact"> 
+  
+    <div id="contact" class="contact-form">
+	<h3>Lets talk!</h3>
+	
+  <form action="#">
+    <label for="name"> Name</label>
+    <input type="text" id="name" name="name" placeholder="Your name..">
 
-<div class="text2" id = "contact"> </div>
+    <label for="email">Email address</label>
+    <input type="text" id="email" name="email" placeholder="Your email address..">
+
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Message..." style="height:200px"></textarea>
+
+    <input id="input" type="submit" value="Submit">
+  </form>
+</div>
+    
+  </div>
   
-  <div class="pic3"> </div>
-  
-  <div class="text3"> </div>
+  <div class="footer"> </div>
   
 </div>
   
